example/secondfile/objects/DHStatus_PsatDs1TestParameters__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Parameters</description>
    <fields>
        <fullName>Bursty_Seconds__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Parameters</description>
        <label>Bursty Seconds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Interval__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Parameters</description>
        <label>Check Interval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Location_Number__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Parameters</description>
        <label>Circuit Location Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Testing_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Parameters</description>
        <label>DHStatus-Testing Details</label>
        <referenceTo>DHStatus_Testing_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Psat Ds1 Test Parameters</relationshipLabel>
        <relationshipName>DHStatus_Psat_Ds1_Test_Parameters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Parameters</description>
        <label>Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Errored_Seconds__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Parameters</description>
        <label>Errored Seconds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flip_Indicator__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Parameters</description>
        <label>Flip Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Of_Frame_Count__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Parameters</description>
        <label>Loss Of Frame Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severely_Errored_Seconds__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Parameters</description>
        <label>Severely Errored Seconds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Name__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Parameters</description>
        <label>Test Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unavailable_Seconds__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Parameters</description>
        <label>Unavailable Seconds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Psat Ds1 Test Parameters</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>DHStatus-PsatDs1TestParameters Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Psat Ds1 Test Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>